Fix: resolve layout issues and improve alignment

--- a/sass/colors.scss
+++ b/sass/colors.scss
@@ -21,5 +21,19 @@ $color__body: #D65DB1;
 $color_gray__navbar: #686260;
 $color__main__card: #DDF2F2;
 $color__gray_light_bg: #CFD1BA;
-
 $color: #fff;
+$color-primery_bg: #F8E8F4;
+$color-primery__background: #EE3B07;
+$color-primery: #e1275f;
+$color-secendery: #e75480;
+$color-text: #f7f7f769;
+$color-text-dark: #777;
+$color-Grey-light-1: #faf9f9;
+$color-Grey-light-2: #f4f2f2;
+$color-Grey-light-3: #f0eeee;
+$color-Grey-light-4: #ccc;
+$color-Grey-dark-1: #333;
+$color-Grey-dark-2: #777;
+$color-Grey-dark-3: #99999930;
+$line: 1px solid var(--color-Grey-light-2);
+$box-shadow-1: 0 2rem 4rem rgba(0, 0, 0, 0.05);
