--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,39 +1,30 @@
-@import "font-style";
+// @import "font-style";
 @import "colors";
-:root {
-    --color-primery_bg: #F8E8F4;
-    --color-primery__background: #EE3B07;
-    --color-primery: #e1275f;
-    --color-secendery: #e75480;
-    --color-text: #f7f7f769;
-    --color-text-dark: #777;
-    --color-Grey-light-1: #faf9f9;
-    --color-Grey-light-2: #f4f2f2;
-    --color-Grey-light-3: #f0eeee;
-    --color-Grey-light-4: #ccc;
-    --color-Grey-dark-1: #333;
-    --color-Grey-dark-2: #777;
-    --color-Grey-dark-3: #999;
-    --line: 1px solid var(--color-Grey-light-2);
-    --box-shadow-1: 0 2rem 4rem rgba(0, 0, 0, 0.05);
-}
+// variabel css
+
 body {
     overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
+    // background-color: red;
+    background-color: rgb(250 250 250 / var(--tw-bg-opacity, 1));
+    max-width: 100rem;
 }
 .container {
-    border: 1px solid;
+    // border: 1px solid;
     padding: 0.4rem;
-    position: relative;
-    bottom: 0.5rem;
-    right: 2rem;
+    // position: relative;
+    // bottom: 0.5rem;
+    // right: 2rem;
     // width: 100rem;
     // width: 10rem;
-    width: 100rem;
-    height: 1.5rem;
-    background-color: $color-black;
+    // width: 100rem;
+    // height: 1.5rem;
+    // background-color: $color-black;
+}
+.header__item {
+    display: inline;
 }
 .p {
     position: relative;
@@ -43,20 +34,27 @@ body {
     color: var(--color-Grey-light-2);
     font-family: 'font__header';
 }
-.list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-    position: relative;
-    top: 5rem;
-}
-.list__item {
-    display: inline-block;
-    left: 21rem;
-    position: relative;
-    bottom: 11rem;
 
+.mynav > ul{
+    position: relative;
+    list-style: none;
+    display: ruby-text;
+    left: 68rem;
+    bottom: 4.2rem;
+}
+.list__item{
+    // display: inline-block;
+    // left: 60rem;
+    // position: relative;
+    // bottom: 9.7rem;
+    z-index: 1;
+}
+.button_github {
+    background-color: #000;
+    color: white;
+    height: 3rem;
+    width: 15rem;
+    border-radius: 50rem;
 }
 
 .item {
@@ -65,6 +63,12 @@ body {
     border: none;
     background-color: #fff;
     font-family: "font__header";
+    // position: relative;
+    // left: 45rem;
+    font-size: 1.3rem;
+    font-weight: bold;
+    // top: 0.3rem;
+    background-color: rgb(250 250 250 / var(--tw-bg-opacity, 1));
 }
 .span_item {
     background-color: blue;
@@ -79,32 +83,39 @@ body {
     cursor: pointer;
     background-color: var(--color-text);
 }
-.item__link {
-    position: relative;
-    bottom: 0.1rem;
-    border-radius: 20px;
+.item__link_text {
     outline: none;
-    // border: 1px solid;
-    background-color: black;
     color: #fff;
-    // height: 5rem;
-    padding: 0.7rem;
     text-decoration: none;
-    font-family: "font__header";
+    padding: 0.5rem;
+    position: relative;
+    bottom: 2.1px;
+    font-size: 1rem;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+
 }
-.photo {
-    // position: relative;
-    bottom: 2rem;
+.item__link{
+    position: relative;
+    font-family: l    "font__header";
+    padding: 0.5rem;
+    background-color: black;
+    border-radius: 20px;
+    width: 15rem;
+    left: 27.2rem;
+}
+
+.photo {    
+    bottom: 1.6rem;
     width: 19rem;
     object-fit: cover;
     height: 5rem;
-}
-.image__Frontend {
     position: relative;
-    // bottom: rem;
-    left: 10rem;
-    // bottom: 1rem;
+    left: 20rem;
+    top: 0.7rem;    
+    filter: brightness(0.96) contrast(1.05);
 }
+
 .image {
     width: 5rem;
     object-fit: cover;
@@ -118,7 +129,60 @@ body {
     width: 5rem;
 }
 .icone_gitgub {
-    border-radius: 50%;
-    width: 2rem;
+    border-radius: 60%;
+    object-fit: cover;
+    width: 1.2rem;
+}
+.dropdown summary {
+    list-style: none;
+}
 
+.item1 {
+    display: flex;
+    position: relative;
+    right: 10rem;
+}
+
+.menu.show {
+  display: block;
+}
+
+.header {
+    display: flex;
+    // background-color: red;
+    width: 300em;
+}
+
+.main {
+  max-width: 1200px;
+  margin: 40px auto;
+  padding: 0 24px;
+}
+
+/* CHALLENGE BADGE */
+.text__divider {
+  display: flex;
+//   justify-content: center;
+  padding: 8px 16px;  
+  font-size: 14px;
+  letter-spacing: 2px;
+  font-weight: 600;
+  color: #6b7280;
+  border: none;
+  border-radius: 4px;
+  position: relative;
+  left: 20rem;
+  top: 0.5rem;
+  border-left: 1px solid $color-Grey-dark-3;
+  height: 56px;
+  padding: 14px 16px;
+}
+.section-line {
+    position: relative;
+    right: 36rem;
+    border-top: 1px solid $color-Grey-dark-3;
+    border-bottom: 1px solid $color-Grey-dark-3;
+    width: 125rem;
+    top: 2.3rem;
+    height: 4rem;
 }
